<resources>
    <string name="app_name">台股管理助手</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="tab_text_cash">轉帳紀錄</string>
    <string name="tab_text_stock_holding">庫存損益</string>
    <string name="tab_text_stock_history">已實現損益</string>
    <string name="tab_text_other">股利與減資</string>
    <string name="title_activity_overview">帳戶總覽</string>
    <string name="add_trans">新增交易</string>
    <string name="title_trans_cash">轉帳紀錄</string>
    <string name="title_trans_stock">股票買賣</string>
    <string name="title_trans_other">股利或減資</string>
    <string name="title_trans_dividend">股利</string>
    <string name="title_trans_reduction">減資</string>
    <string name="title_activity_test_form">TestFormActivity</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_trans">TransActivity</string>
    <string name="btn_check">確　認</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="trans_stock_selector">股票選擇</string>
    <string name="trans_stock_name">股票標的</string>
    <string name="trans_stock_amount">成交股數</string>
    <string name="trans_stock_price">成交價格</string>
    <string name="trans_stock_fee">手續費</string>
    <string name="trans_stock_tax">證交稅</string>
    <string name="trans_cash_total_in">總存入金額</string>
    <string name="trans_cash_total_out">總提領金額</string>
    <string name="trans_date">交易日期</string>
    <string name="trans_type">交易類型</string>
    <string name="trans_cash">交易金額</string>
    <string name="trans_remark">交易備註</string>
    <string name="trans_stock_earn">發放股數</string>
    <string name="trans_cash_earn">發放金額</string>
    <string name="trans_stock_lose">減少股數</string>
    <string name="TRANS_TYPE_STOCK_BUY">股票買入</string>
    <string name="TRANS_TYPE_STOCK_SELL">股票賣出</string>
    <string name="TRANS_TYPE_CASH_IN">現金轉入</string>
    <string name="TRANS_TYPE_CASH_OUT">現金轉出</string>
    <string name="TRANS_TYPE_CASH_DIVIDEND">現金股利</string>
    <string name="TRANS_TYPE_STOCK_DIVIDEND">股票股利</string>
    <string name="TRANS_TYPE_CASH_REDUCTION">現金減資</string>
    <string name="TRANS_TYPE_STOCK_REDUCTION">股票減資</string>
    <string name="title_activity_settings">帳戶設定</string>
    <string name="setting_fee_discount">手續費優惠</string>
    <string name="setting_fee_minimum">最低手續費</string>
    <string name="setting_ma_alert_level">MACD 關注等級</string>
    <string name="ma_alert_level_summary">%1$s — %2$s</string>
    <string name="ma_alert_level_low">保守</string>
    <string name="ma_alert_level_default">穩健</string>
    <string name="ma_alert_level_high">積極</string>
    <string name="setting_macd_event_subscription">關注事件</string>
    <string name="macd_event_golden">MACD 突破</string>
    <string name="macd_event_death">MACD 跌落</string>
    <string name="ema_event_breakthrough">EMA 突破</string>
    <string name="ema_event_breakdown">EMA 跌落</string>
    <string name="boll_event_breakthrough">突破上行通道</string>
    <string name="boll_event_breakdown">跌落下行通道</string>
    <string name="macd_event_subscription_summary">已關注 %1$d 個事件</string>
    <string name="macd_event_subscription_none">未選擇任何事件</string>
    <string name="hint_stock_search">請輸入股票代碼或名稱</string>
    <string name="syncing">同步中</string>
    <string name="title_activity_http_request_demo">HttpRequestDemo</string>
    <string name="invested_cost">投入成本</string>
    <string name="profit_calc">損益試算</string>
    <string name="profit_rate">報酬率</string>
    <string name="ROI">投資報酬率</string>
    <string name="stock_value_calc">股票市值</string>
    <string name="account_calc">帳戶現值</string>
    <string name="account_total">帳戶總額</string>
    <string name="account_balance">可用餘額</string>
    <string name="no_holding_stock">未持有任何股票</string>
    <string name="account_detail">進入帳戶</string>
    <string name="profit_color_reverse">綠漲紅跌</string>
    <string name="setting_chart_indicator">技術線圖指標</string>
    <string name="chart_indicator_ma">移動平均線（MA）</string>
    <string name="chart_indicator_ema">指數平滑移動平均線（EMA）</string>
    <string name="chart_indicator_bband">布林通道（BBand）</string>
    <string name="setting_category_demo">開發 / 測試</string>
    <string name="setting_import_simulated_data">導入模擬數據</string>
    <string name="setting_import_simulated_data_summary">追加寫入預設交易紀錄；成功後將關閉 App，請重新開啟以載入資料</string>
    <string name="import_simulated_data_confirm_title">導入模擬數據</string>
    <string name="import_simulated_data_confirm_message">將追加寫入模擬交易紀錄，不會刪除既有資料。\n\n導入成功後應用程式會自動關閉，請重新開啟 App，帳戶總覽與庫存才會載入最新資料。\n\n重複執行會重複新增相同紀錄，是否繼續？</string>
    <string name="import_simulated_data_success_dialog_title">導入完成</string>
    <string name="import_simulated_data_success_dialog_message">已成功導入 %1$d 筆模擬交易。\n\n應用程式即將關閉，請重新開啟 App 以重新載入帳戶與庫存資料。</string>
    <string name="import_simulated_data_partial_dialog_message">已導入 %1$d 筆，另有 %2$d 筆失敗。\n\n應用程式即將關閉，請重新開啟 App 以重新載入帳戶與庫存資料。</string>
    <string name="import_simulated_data_fail">導入失敗，請稍後再試</string>
    <string name="holding_amount">庫存股數</string>
    <string name="holding_cost">持股成本</string>
    <string name="holding_calc">持股現值</string>
    <string name="holding_profit">損益試算</string>
    <string name="average_buy">買入平均價</string>
    <string name="average_sell">賣出平均價</string>
    <string name="history_cost">平均成本</string>
    <string name="history_profit">已實現損益</string>
    <string name="realtime_price">即時股價</string>
    <string name="dialog_remove_stock_msg">刪除所有【%s】的紀錄?</string>
    <string name="dialog_remove_stock_dividend_reduction_msg">刪除所有【%s】的股利與減資紀錄?</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="copyright_msg">Copyright © YYYY MSI</string>
    <string name="search_stock">股票搜尋</string>
    <string name="filter">過濾器</string>
    <string name="title_activity_list">歷史紀錄</string>
    <string name="no_data">尚無資料</string>
    <string name="dividend_cash">現金股利</string>
    <string name="dividend_stock">股票股利</string>
    <string name="reduction_cash">減資返現</string>
    <string name="reduction_stock">減資股數</string>
    <string name="reset_filter">清除所有</string>
    <string name="apply_filter">應用篩選</string>
    <string name="title_filter">進階篩選</string>
    <string name="search">搜尋</string>
    <string name="version">版本</string>
    <string name="about">關於</string>
    <string name="date_range">日期範圍</string>
    <string name="date_start">開始日期</string>
    <string name="date_end">結束日期</string>
    <string name="date_to">至</string>
    <string name="date_today">今天</string>
    <string name="date_week">最近一周</string>
    <string name="date_month">最近一個月</string>
    <string name="date_year">最近一年</string>
    <string name="not_select">未選擇</string>
    <string name="title_activity_news">新聞情報</string>
    <string name="news_type_all">全部</string>
    <string name="news_type_stock">股市</string>
    <string name="news_type_bulletin">公告</string>
    <string name="news_type_exchange">外匯</string>
    <string name="news_type_crypto">加密貨幣</string>
    <string name="cannot_open_url">無法開啟連結</string>
    <string name="title_activity_analysis">智慧分析</string>
    <string-array name="history_interval">
        <item>1m</item>
        <item>2m</item>
        <item>5m</item>
        <item>15m</item>
        <item>30m</item>
        <item>60m</item>
        <item>90m</item>
        <item>1h</item>
        <item>1d</item>
        <item>5d</item>
        <item>1wk</item>
        <item>1mo</item>
        <item>3mo</item>
    </string-array>
    <string-array name="history_interval_string">
        <item>每1分鐘的交易量</item>
        <item>每2分鐘的交易量</item>
        <item>每5分鐘的交易量</item>
        <item>每15分鐘的交易量</item>
        <item>每30分鐘的交易量</item>
        <item>每60分鐘的交易量</item>
        <item>每90分鐘的交易量</item>
        <item>每小時鐘的交易量</item>
        <item>每一天的交易量</item>
        <item>每五天的交易量</item>
        <item>每一周的交易量</item>
        <item>每一個月的交易量</item>
        <item>每三個月的交易量</item>
    </string-array>
    <string-array name="history_valid_ranges">
        <item>1d</item>
        <item>5d</item>
        <item>1mo</item>
        <item>3mo</item>
        <item>6mo</item>
        <item>1y</item>
        <item>2y</item>
        <item>5y</item>
        <item>10y</item>
        <item>ytd</item>
        <item>max</item>
    </string-array>
    <string-array name="history_valid_ranges_string">
        <item>過去一天</item>
        <item>過去五天</item>
        <item>過去一個月</item>
        <item>過去三個月</item>
        <item>過去六個月</item>
        <item>過去一年</item>
        <item>過去兩年</item>
        <item>過去五年</item>
        <item>過去十年</item>
        <item>今年到現在</item>
        <item>最大</item>
    </string-array>
    <string name="title_activity_kline_view">KlineViewActivity</string>
    <string name="today_open">今日開盤價</string>
    <string name="today_high">今日最高價</string>
    <string name="today_low">今日最低價</string>
    <string name="today_close">今日收盤價</string>
    <string name="today_volume">今日成交量</string>
    <string name="advice">智慧分析</string>
    <string name="long_score">趨勢走向</string>
    <string name="short_score">買賣壓力</string>
    <string name="total_score">綜合分數</string>
    <string-array name="score_list">
        <item>強勢下跌</item>
        <item>下跌趨勢</item>
        <item>建議觀望</item>
        <item>上漲趨勢</item>
        <item>強勢上漲</item>
    </string-array>
    <string name="init_error_title">初始化失敗</string>
    <string name="init_error_message">無法初始化應用，請確認您的網路環境，或重新嘗試同步</string>
    <string name="launch_init_preparing">正在準備應用設定</string>
    <string name="launch_init_loading_account">正在載入帳務資料</string>
    <string name="launch_init_loading_news">正在取得即時新聞</string>
    <string name="launch_init_done">初始化完成</string>
    <string name="retry">重試</string>
    <string name="exit">離開</string>
    <string name="watching_list">觀察清單</string>
    <string name="watching_list_added">已加入觀察清單</string>
    <string name="watching_list_removed">已從觀察清單移除</string>
    <string name="title_activity_revenue">營收分析</string>
    <string name="revenue_title_date">yyyy年MM月</string>
    <string name="revenue_table_header_row">觀察清單</string>
    <string name="revenue_table_header_stock_id">股票代碼</string>
    <string name="revenue_table_header_company_name">公司名稱</string>
    <string name="revenue_table_header_company_type">產業類別</string>
    <string name="revenue_table_header_revenue_this_month">當月營收</string>
    <string name="revenue_table_header_revenue_last_month">上月營收</string>
    <string name="revenue_table_header_revenue_last_year">去年同月營收</string>
    <string name="revenue_table_header_revenue_mom">月增率</string>
    <string name="revenue_table_header_revenue_yoy">年增率</string>
    <string name="revenue_table_header_revenue_this_ytd">今年累積營收</string>
    <string name="revenue_table_header_revenue_last_ytd">去年累積營收</string>
    <string name="revenue_table_header_revenue_yoy_ytd">累積年增率</string>
    <string name="revenue_filter_hidden_items">隱藏欄位</string>
    <string name="revenue_filter_reset">重設篩選</string>
    <string name="revenue_filter_sort_type">排序方式</string>
    <string name="revenue_filter_sort_type_asc">由小至大</string>
    <string name="revenue_filter_sort_type_des">由大至小</string>
    <string name="revenue_filter_sort_target">排序目標</string>
    <string name="revenue_watching_list_remove_title">取消關注確認</string>
    <string name="revenue_watching_list_remove_msg">將「${stock_name}」從關注清單中移除?</string>
    <string name="notify_title">通知</string>
    <string name="notify_empty_message">目前無任何通知</string>
    <string name="notify_mark_all_read">全部已讀</string>
    <string name="notify_delete_all">全部刪除</string>
</resources>