<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:inputType="numberDecimal"
        android:key="setting_fee_discount"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_fee_discount"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="20"
        android:inputType="numberSigned"
        android:key="setting_fee_minimum"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_fee_minimum"
        app:useSimpleSummaryProvider="true" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="profit_color_reverse"
        android:title="@string/profit_color_reverse" />
    
    <ListPreference
        android:defaultValue="DEFAULT"
        android:entries="@array/ma_alert_level_entries"
        android:entryValues="@array/ma_alert_level_values"
        android:key="setting_ma_alert_level"
        android:title="@string/setting_ma_alert_level" />

    <MultiSelectListPreference
        android:defaultValue="@array/macd_event_subscription_default_values"
        android:entries="@array/macd_event_subscription_entries"
        android:entryValues="@array/macd_event_subscription_values"
        android:key="setting_macd_event_subscription"
        android:title="@string/setting_macd_event_subscription" />

    <PreferenceCategory android:title="@string/setting_category_demo">
        <Preference
            android:key="import_simulated_data"
            android:title="@string/setting_import_simulated_data"
            android:summary="@string/setting_import_simulated_data_summary" />
    </PreferenceCategory>

</PreferenceScreen>