<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_notify"
        android:orderInCategory="0"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notify_title"
        android:iconTint="@color/white"
        app:showAsAction="always"
        app:actionLayout="@layout/menu_notify_badge"/>
    <item
        android:id="@+id/menu_revenue"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/title_activity_revenue"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_analysis"
        android:orderInCategory="2"
        android:icon="@drawable/query_stats"
        android:title="@string/title_activity_analysis"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_news"
        android:orderInCategory="3"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/title_activity_news"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="4"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_activity_settings"
        app:showAsAction="ifRoom"/>
</menu>