<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.pager.holding.HoldingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main_s"
        android:padding="@dimen/card_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stock_value_calc"
            android:textColor="?attr/colorOnSecondary" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/invested_cost"
            android:textColor="?attr/colorOnSecondary"
            tools:layout_editor_absoluteX="137dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profit_calc"
            android:textColor="?attr/colorOnSecondary"
            tools:layout_editor_absoluteX="274dp" />

        <TextView
            android:id="@+id/stock_value_calc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/syncing"
            android:textColor="?attr/colorOnSecondary"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="29dp" />

        <TextView
            android:id="@+id/invested_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/syncing"
            android:textColor="?attr/colorOnSecondary"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="29dp" />

        <TextView
            android:id="@+id/profit_calc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/syncing"
            android:textColor="?attr/colorOnSecondary"
            tools:layout_editor_absoluteX="270dp"
            tools:layout_editor_absoluteY="29dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="textView13,textView14,textView15,stock_value_calc,invested_cost,profit_calc"
            app:flow_maxElementsWrap="3"
            app:flow_wrapMode="chain" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name=".ui.main.HoldingFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/card_margin"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        tools:listitem="@layout/fragment_holding_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
